Fix dataset table overflow on Firefox

--- a/ckanext/editor/public/css/editor.css
+++ b/ckanext/editor/public/css/editor.css
@@ -16,10 +16,11 @@
 }
 
 .editor-form .field-value-column {
-    max-height: 200px;
-    overflow: auto;
+    max-height: 300px;
 }
 
 .editor-form .field-value-column .column-content {
-    max-height: 200px;
+    max-height: 300px;
+    width: 100%;
+    overflow-y: scroll;
 }
